4th-Day/fastapi-openai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-openai-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: fastapi-openai
