4th-Day/fastapi-openai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-openai-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /fastapi(/|$)(.*)
        backend:
          service:
            name: fastapi-openai-service
            port:
              number: 8000
